--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 <color name="colorAccent">#cddc39</color>
 <color name="colorPrimaryText">#212121</color>
 <color name="colorSecondaryText">#727272</color>
-<color name="colorTextIcons">#ffffff</color>
+<color name="colorTextIcons">#FFFFFF</color>
 <color name="colorDivider">#b6b6b6</color>
 <color name="gradientStart">#98ecf3</color>
 <color name="gradientEnd">#a5b2fd</color>
